--- a/styles.CSS
+++ b/styles.CSS
@@ -7,8 +7,44 @@
 margin: 0%;
 box-sizing: border-box;}
 
+body{
+    max-width: 100vw;
+    overflow: scroll;
+}
+
 #landing{
 background-color: rgba(115, 66, 214, 0.1);
+}
+
+.purple{
+color: #7342d6;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    max-height: 50vh;
+}
+p{
+    line-height: 1.5;
+}
+
+button{
+    cursor: pointer;
+}
+
+button:active{
+    transform: translateY(1px);
+}
+
+.container{
+padding: 56px 0px;
+}
+
+.row{
+width: 100%;
+max-width: 1200px;
+margin: 0 auto;
 }
 
 /*  NAV   */
@@ -60,3 +96,127 @@ li{
     text-decoration: none !important; 
 }
 
+/*     HEADER    */
+
+header{
+    height: calc(100vh-80px);
+}
+
+.header__container{
+    width: 100%;
+    max-width: 720px;
+    margin: 0 auto;
+    height: 100%;
+display: flex;
+flex-direction: column;
+justify-content: space-around;}
+
+
+.header__description{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+h1{
+    font-size: 56px;
+    color: #7342d6;
+    margin-bottom: 24px;
+    text-align: center;
+}
+
+h2{
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 32px;
+}
+
+.btn{
+    background-color: #7342d6;
+    color: white;
+    padding: 12px 24px;
+    font-size: 20px;
+    border-radius: 4px;
+    border: none;
+}
+
+
+.header__img__wrapper{
+    padding: 20px;
+    z-index: 2;
+}
+
+
+
+/*    HIGHLIGHTS    */
+
+#highlights{
+    position: relative;
+    max-width: 100vw;
+}
+
+#highlights:before,
+#highlights:after{
+    background: url(./assets/wave.svg);
+    content: "";
+    position: absolute;
+    width: 101vw;
+    height: 12vw;
+left: 0px;
+z-index: 1;
+background-size:cover;
+background-repeat: no-repeat;
+}
+
+
+#highlights:before{
+transform: translateY(-100%);
+top: 1px;
+}
+
+#highlights:after{
+transform: translateY(100%) rotate(180deg);
+ bottom: 1px;
+}
+
+
+.highlight__wrapper{
+    display: flex;
+}
+
+.highlight{
+    padding: 0px 24px;
+    width: calc(100%/3);
+}
+
+.highlight__para{
+    text-align: center;
+    max-width: 280px;
+}
+
+.highlight__img{
+    border: 2px solid #7342d686;
+    color: #7342d6;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+font-size: 32px; 
+border-radius: 4px;
+margin-bottom: 24px;
+}
+
+.highlight__subtitel{
+    font-size: 20px;
+    margin-bottom: 16px;
+}
+
+
+/*   FEATURES   */
+
+
+#features{ 
+    background-color:rgba(115, 66, 214, 0.1);
+    height: 1000px;
+
+}
