--- a/styles.CSS
+++ b/styles.CSS
@@ -6,10 +6,13 @@
 *{padding: 0%;
 margin: 0%;
 box-sizing: border-box;}
+html{
+    scroll-behavior: smooth;
+}
 
 body{
     max-width: 100vw;
-    overflow: scroll;
+    overflow-x: hidden;
 }
 
 #landing{
@@ -45,6 +48,19 @@ padding: 56px 0px;
 width: 100%;
 max-width: 1200px;
 margin: 0 auto;
+}
+
+.row__column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.no-cursor{
+    cursor: not-allowed;
+}
+a{
+    text-decoration: none;
 }
 
 /*  NAV   */
@@ -94,6 +110,73 @@ li{
 
 .nav__link__primary{
     text-decoration: none !important; 
+}
+
+/*   BURGUR MENU   */
+
+
+.btn__menu{
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    border: none;
+    color: #7342d6;
+    padding-right: 10px;
+    display: none;
+}
+
+.menu__backdrop{
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.menu--open .menu__backdrop{
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu--open{
+    max-height: 100vh;
+    overflow-y: hidden;
+}
+
+.menu__links{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.menu__list{
+    padding: 32px 0px;
+}
+
+.menu__link{
+    color: white;
+    font-size: 40px;
+}
+
+.menu__link:hover{
+    text-decoration: underline;
+}
+
+.btn__menu__close{
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
 }
 
 /*     HEADER    */
@@ -181,11 +264,15 @@ transform: translateY(100%) rotate(180deg);
 
 .highlight__wrapper{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .highlight{
     padding: 0px 24px;
     width: calc(100%/3);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .highlight__para{
@@ -209,6 +296,7 @@ margin-bottom: 24px;
 .highlight__subtitel{
     font-size: 20px;
     margin-bottom: 16px;
+    text-align: center;
 }
 
 
@@ -216,7 +304,155 @@ margin-bottom: 24px;
 
 
 #features{ 
+    padding-top: 8vw;
     background-color:rgba(115, 66, 214, 0.1);
-    height: 1000px;
 
 }
+
+.books{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.book{
+    width: 25%;
+    padding: 24px;
+}
+
+.book__img{
+    max-height: 380px;
+    transition: 300ms ease;
+    cursor: not-allowed;
+}
+
+.book__img__wrapper{
+    margin-bottom: 8px;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+}
+
+.book:hover .book__img{
+    transform: scale(1.03);
+}
+
+.book__titel{
+font-size: 20px;
+margin-bottom: 8px;
+}
+
+.book__titel:hover{
+    text-decoration: underline;
+    cursor: not-allowed;
+}
+
+.book__ratings{
+    margin-bottom: 8px;
+    color: #fabf2a;
+}
+
+.book__price__normal{
+    text-decoration: line-through;
+    padding-right: 6px;
+    color: #bfbfbf;
+}
+
+
+/*    RECENT    */
+
+
+
+
+.books__recent{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+/*     EXPLORE     */
+
+#explore{
+    background-color: rgba(115, 66, 214, 0.1);
+}
+
+
+
+/*     FOOTER    */
+
+footer{
+    background-color: #242424;
+}
+
+.footer__img{
+    display: flex;
+   width: 160px;
+   filter: grayscale(1) invert(1);
+
+}
+
+.footer__links{
+    margin: 20px 0px 24px 0px;
+}
+
+.footer__link{
+    padding: 0px 8px;
+    text-decoration: none;
+    color: #fff;
+}
+
+.footer__copyright{
+    color:#fff ;
+}
+
+
+
+.footer__link:hover{
+    text-decoration: underline;
+}
+
+/*     PHONES; TABLETS, LARGE PHONES     */
+
+
+@media(max-width:768px){
+    .header__description{
+        padding: 0px 24px;
+    }
+
+    h1{
+        font-size: 40px;
+    }
+
+    h2{
+        font-size: 26px;
+    }
+
+    button{
+        font-size: 18px;
+    }
+
+    .book{
+        width: 50%;
+    }
+}
+
+/*      SMALL AND LARGE PHONES    */
+
+@media(max-width:550px){
+    .nav__links{
+        display: none;
+    }
+
+    .btn__menu{
+        display: block;
+    }
+    .highlight{
+        width: 100%;
+    }
+
+    .highlight:not(:last-child){
+        margin-bottom: "24px";
+    }
+}
+
+
+
